# funky-lesson

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  rustfmt.toml
.github/workflows/: ci.yml
scripts/: dev-new.ps1  dev.ps1  dev.sh
src/: app.rs  bpp.rs  cpp.rs  external_browser.rs  external_link.rs  main.rs  scrollbar.css
src-proxy/: Cargo.toml
src-proxy/src/: lib.rs  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
