[package]
name = "funky_lesson_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls","json", "cookies"]}
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
log = "0.4"
env_logger = "0.11.6"
